[package]
name    = "fadroma"
version = "1.0.0"
edition = "2018"
license = "AGPL-3.0"
authors = [
  # Core maintainers:
  "Adam A. <adam@hack.bg>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
  "denismaxim0v <denis_maxim0v@protonmail.com>",

  # Featuring contributions by:
  "Chris Ricketts <chris.ricketts@steribar.com>",
  "Tibor Hudik <tibor@barrage.net>",
  "Wiz1991 <wizoftime92@gmail.com>",
  "hydropump3 <3ki2fiay@anonaddy.me>",

  # SNIP-20 implementation based on:
  "Itzik <itzik@keytango.io>"
]

[lib]
path = "lib.rs"

[features]
default = [
  # Features
  "scrt"
]

scrt = [
  # Dependencies
  "fadroma-platform-scrt"
]

permit = [
  # Features
  "scrt",
  # Dependencies
  "ripemd160", "secp256k1", "sha2", "remain", "bech32"
]

vk = [
  # Features
  "scrt", "experimental", "crypto"
]

ensemble = [
  # Features
  "scrt",
  # Dependencies
  "oorandom", "anyhow"
]

crypto = [
  # Features
  "scrt",
  # Dependencies
  "rand_core", "rand_chacha", "subtle", "sha2"
]

snip20-impl = [
  # Features
  "scrt", "permit", "vk",
  # Dependencies
  "schemars"
]

experimental = [
  "fadroma-proc-derive", "fadroma-proc-message"
]

auth = [
  "fadroma-proc-auth"
]

# Old
backtraces = [] # TODO set backtraces on components
browser = [ "backtraces" ]
harness = []

[dependencies]
# Supported platforms
fadroma-platform-scrt = { optional = true, path = "../fadroma-platform-scrt" }

# Procedural macro crates
fadroma-derive-canonize = { path = "../fadroma-derive-canonize" }
fadroma-proc-auth = { optional = true, path = "../fadroma-proc-auth" }
fadroma-proc-derive = { optional = true, path = "../fadroma-proc-derive" }
fadroma-proc-message = { optional = true, path = "../fadroma-proc-message" }

# Dependencies
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
oorandom = { optional = true, version = "11.1.3" }
primitive-types = { optional = true, version = "0.9.1", default-features = false }
rand_chacha = { optional = true, version = "0.2.2", default-features = false }
rand_core = { optional = true, version = "0.5.1", default-features = false }
remain = { optional = true, version = "0.2.2" }
schemars = { optional = true, version = "0.8.10" }
ripemd160 = { optional = true, version = "0.9.1" }
secp256k1 = { optional = true, version = "0.20.3" }
bech32 = { optional = true, version = "0.8.1" }
sha2 = { optional = true, version = "0.9.1", default-features = false }
subtle = { optional = true, version = "2.4.0", default-features = false }
anyhow = { optional = true, version = "1.0.65" }

# Enable iterator for testing (not supported in production)
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
fadroma-platform-scrt = { optional = true, path = "../fadroma-platform-scrt", features = ["iterator"] }
