[package]
name = "fadroma"
version = "0.7.0"
edition = "2018"
license = "AGPL-3.0"
keywords = ["blockchain", "cosmos", "cosmwasm", "smart-contract"]
description = "Tools and frequently used functionality for developing CosmWasm smart contracts"
repository = "https://github.com/hackbg/fadroma"
readme = "README.md"
authors = [
  # Core maintainers:
  "Adam A. <adam@hack.bg>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
  "denismaxim0v <denis_maxim0v@protonmail.com>",

  # Featuring contributions by:
  "Chris Ricketts <chris.ricketts@steribar.com>",
  "Tibor Hudik <tibor@barrage.net>",
  "Wiz1991 <wizoftime92@gmail.com>",
  "hydropump3 <3ki2fiay@anonaddy.me>",

  # SNIP-20 implementation based on:
  "Itzik <itzik@keytango.io>"
]

[lib]
path = "lib.rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true

[features]
scrt = [
  # Dependencies
  "secret-cosmwasm-std"
]

permit = [
  # Features
  "scrt",
  # Dependencies
  "ripemd", "sha2", "remain", "bech32"
]

vk = [
  # Features
  "scrt", "crypto",
  # Dependencies
  "subtle"
]

ensemble = [ "oorandom", "anyhow" ]
ensemble-staking = [ "ensemble", "time/formatting", "staking" ]

crypto = [
  "rand_core", "rand_chacha", "sha2"
]

snip20-impl = [
  # Features
  "scrt", "permit", "vk"
]

# Can't be used on the stable channel
#backtraces = [ "secret-cosmwasm-std/backtraces" ]
staking = ["secret-cosmwasm-std/staking"]

[dependencies]
# Supported platforms
secret-cosmwasm-std = { version = "1.0.0", default-features = false, optional = true }

# Procedural macro crates
fadroma-derive-canonize = { version = "0.3.0", path = "../fadroma-derive-canonize" }
fadroma-derive-serde = { version = "0.1.0", path = "../fadroma-derive-serde" }
fadroma-proc-derive = { version = "0.7.0", path = "../fadroma-proc-derive" }
fadroma-proc-auth = { version = "0.1.0", path = "../fadroma-proc-auth" }
fadroma-proc-message = { version = "0.1.0", path = "../fadroma-proc-message" }

# Dependencies
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
schemars = "0.8.11"
oorandom = { optional = true, version = "11.1.3" }
primitive-types = { optional = true, version = "0.9.1", default-features = false }
rand_chacha = { optional = true, version = "0.3.1", default-features = false }
rand_core = { optional = true, version = "0.6.4", default-features = false }
remain = { optional = true, version = "0.2.6" }
ripemd = { optional = true, version = "0.1.3" }
bech32 = { optional = true, version = "0.9.1" }
sha2 = { optional = true, version = "0.10.6", default-features = false }
subtle = { optional = true, version = "2.4.1", default-features = false }
anyhow = { optional = true, version = "1.0.65" }
time = { optional = true, version = "0.3.17" }

# Enable iterator for testing (not supported in production)
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
secret-cosmwasm-std = { version = "1.0.0", default-features = false, features = ["iterator"], optional = true }

[dev-dependencies]
criterion = "0.4.0"
bincode2 = "2.0.1"
proptest = "1.1.0"

[[bench]]
name = "bench_main"
harness = false
