[package]
name = "fadroma-example-derive-contract-interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/contract.rs"

[dependencies]
fadroma = { path = "../../crates/fadroma", features = ["scrt"] }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
