[package]
name    = "fadroma-example-echo"
version = "1.0.0"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "echo.rs"

[dependencies]
fadroma = { git = "https://github.com/hackbg/fadroma", branch = "stable", features = ["scrt"] }
serde   = { version = "1.0.103", default-features = false, features = ["derive"] }
