[package]
name = "ensemble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
fadroma = { path = "../../crates/fadroma" }
serde    = { version = "1.0.103", default-features = false, features = ["derive"] }
derive-contract-interface = { path = "../derive-contract-interface" }