[package]
name = "fadroma-example-ensemble"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
fadroma = { path = "../../crates/fadroma", features = ["scrt", "ensemble"] }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
counter = { package = "fadroma-example-derive-contract-interface", path = "../derive-contract-interface" }
